--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   isar: ^3.1.0+1
+
   path_provider: ^2.1.5
   provider: ^6.1.2
   flutter_json: ^0.0.4
+  isar_flutter_libs: ^3.1.0+1
   
 
 dev_dependencies:
@@ -54,7 +56,7 @@ dev_dependencies:
   isar_generator: ^3.1.0+1
   build_runner: ^2.4.13
   json_serializable: ^6.8.0
-
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
