--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.2
   flutter_json: ^0.0.4
   isar_flutter_libs: ^3.1.0+1
+  google_fonts: ^6.2.1
   
 
 dev_dependencies:
